# Conversational-Agent

./: .gitignore  README.md  main.py  pyproject.toml
core/: logger.py  settings.py
gemini/: gemini_connector.py  prompts.py
google_sheet_settings/: google_sheet_connector.py  utils.py
report_automation/: core.py
